err.log
In file included from ./src/server.c:1:0:
./include/base.h:56:0: warning: "ERROR" redefined
 #define ERROR  1
 
In file included from c:\program files\git\mingw32\include\windows.h:46:0,
                 from ./include/base.h:18,
                 from ./src/server.c:1:
c:\program files\git\mingw32\include\wingdi.h:348:0: note: this is the location of the previous definition
 #define ERROR       0
 
In file included from ./src/server.c:1:0:
./include/base.h:187:0: warning: "max" redefined
 #define max(a,b)    (((a) > (b)) ? (a) : (b))
 
In file included from c:\program files\git\mingw32\include\windows.h:42:0,
                 from ./include/base.h:18,
                 from ./src/server.c:1:
c:\program files\git\mingw32\include\windef.h:162:0: note: this is the location of the previous definition
 #define max(a,b) ((a)>(b)?(a):(b))
 
In file included from ./src/server.c:1:0:
./include/base.h:188:0: warning: "min" redefined
 #define min(a,b)    (((a) < (b)) ? (a) : (b))
 
In file included from c:\program files\git\mingw32\include\windows.h:42:0,
                 from ./include/base.h:18,
                 from ./src/server.c:1:
c:\program files\git\mingw32\include\windef.h:165:0: note: this is the location of the previous definition
 #define min(a,b) ((a)<(b)?(a):(b))
 
./src/server.c: In function 'do_exit':
./src/server.c:17:2: warning: implicit declaration of function 'destroy_socket' [-Wimplicit-function-declaration]
  destroy_socket();
  ^~~~~~~~~~~~~~
./src/server.c:18:2: warning: implicit declaration of function 'destroy_display' [-Wimplicit-function-declaration]
  destroy_display();
  ^~~~~~~~~~~~~~~
./src/server.c: In function 'send_pipe':
./src/server.c:26:5: warning: implicit declaration of function 'set_request_head' [-Wimplicit-function-declaration]
     set_request_head(buf, 0x0, cmd, size);
     ^~~~~~~~~~~~~~~~
./src/server.c: In function 'send_ready':
./src/server.c:62:18: warning: pointer targets in passing argument 1 of 'send_pipe' differ in signedness [-Wpointer-sign]
  ret = send_pipe(buf, SER_PLAY_MSG, sizeof(int));
                  ^~~
./src/server.c:23:12: note: expected 'char *' but argument is of type 'unsigned char *'
 static int send_pipe(char *buf, short cmd, int size)
            ^~~~~~~~~
./src/server.c: In function 'recv_ready':
./src/server.c:75:7: warning: variable 'ret' set but not used [-Wunused-but-set-variable]
   int ret, code;
       ^~~
./src/server.c: In function 'send_options':
./src/server.c:93:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
In file included from ./src/server.c:1:0:
./src/server.c: In function 'recv_options':
./include/base.h:44:34: warning: too many arguments for format [-Wformat-extra-args]
 #define DEBUG(format,...) printf("File: "__FILE__", Line: %05d: "format"\r\n", __LINE__, ##__VA_ARGS__);\
                                  ^
./src/server.c:102:9: note: in expansion of macro 'DEBUG'
         DEBUG("fmt->width %d, fmt->height %d fmt->code %d fmt->data_port %d fmt->bps %d fmt->fps",
         ^~~~~
./src/server.c:110:4: warning: 'usleep' is deprecated [-Wdeprecated-declarations]
    usleep(2000);
    ^~~~~~
In file included from ./include/base.h:7:0,
                 from ./src/server.c:1:
c:\program files\git\mingw32\include\unistd.h:100:29: note: declared here
 int __cdecl __MINGW_NOTHROW usleep( useconds_t )__MINGW_ATTRIB_DEPRECATED;
                             ^~~~~~
./src/server.c: In function 'send_login':
./src/server.c:216:5: warning: implicit declaration of function 'get_version' [-Wimplicit-function-declaration]
     get_version(&server_major, &server_minor);
     ^~~~~~~~~~~
./src/server.c:217:13: warning: pointer targets in passing argument 1 of 'sprintf' differ in signedness [-Wpointer-sign]
     sprintf(req->data_buf, VERSIONFORMAT, server_major, server_minor);
             ^~~
In file included from ./include/base.h:4:0,
                 from ./src/server.c:1:
c:\program files\git\mingw32\include\stdio.h:455:38: note: expected 'char *' but argument is of type 'unsigned char *'
 _CRTIMP __cdecl __MINGW_NOTHROW  int sprintf (char *, const char *, ...);
                                      ^~~~~~~
./src/server.c: In function 'init_server':
./src/server.c:311:5: warning: implicit declaration of function 'bind_socket' [-Wimplicit-function-declaration]
  if(bind_socket(server_s, client_port) == -1)
     ^~~~~~~~~~~
./src/server.c:317:8: warning: implicit declaration of function 'create_display' [-Wimplicit-function-declaration]
  ret = create_display()
        ^~~~~~~~~~~~~~
./src/server.c:318:2: error: expected ';' before 'if'
  if(ret != SUCCESS)
  ^~
./src/server.c:355:2: warning: implicit declaration of function 'close_fd' [-Wimplicit-function-declaration]
  close_fd(server_s);
  ^~~~~~~~
At top level:
./src/server.c:88:12: warning: 'send_options' defined but not used [-Wunused-function]
 static int send_options()
            ^~~~~~~~~~~~
make: *** [server.o] Error 1
